--- a/netflix-DataAnalysis_Python.ipynb
+++ b/netflix-DataAnalysis_Python.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "25bb3842",
    "metadata": {
     "execution": {
@@ -62,13 +62,13 @@
     "tags": []
    },
    "source": [
-    "## Loading the Dataset\n",
+    "## 1. Loading the Dataset\n",
     "`pd.read_csv()` function loads the Netflix dataset from a CSV file into a Pandas DataFrame, enabling data manipulation and analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "f4963c63",
    "metadata": {
     "execution": {
@@ -220,48 +220,6 @@
        "      <td>Horror Movies, International Movies</td>\n",
        "      <td>After an awful accident, a couple admitted to ...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>s8</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>187</td>\n",
-       "      <td>Kevin Reynolds</td>\n",
-       "      <td>Samuel L. Jackson, John Heard, Kelly Rowan, Cl...</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>November 1, 2019</td>\n",
-       "      <td>R</td>\n",
-       "      <td>119 min</td>\n",
-       "      <td>Dramas</td>\n",
-       "      <td>After one of his high school students attacks ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>s9</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>706</td>\n",
-       "      <td>Shravan Kumar</td>\n",
-       "      <td>Divya Dutta, Atul Kulkarni, Mohan Agashe, Anup...</td>\n",
-       "      <td>India</td>\n",
-       "      <td>April 1, 2019</td>\n",
-       "      <td>TV-14</td>\n",
-       "      <td>118 min</td>\n",
-       "      <td>Horror Movies, International Movies</td>\n",
-       "      <td>When a doctor goes missing, his psychiatrist w...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>s10</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>Vikram Bhatt</td>\n",
-       "      <td>Rajneesh Duggal, Adah Sharma, Indraneil Sengup...</td>\n",
-       "      <td>India</td>\n",
-       "      <td>December 15, 2017</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>143 min</td>\n",
-       "      <td>Horror Movies, International Movies, Thrillers</td>\n",
-       "      <td>An architect and his wife move into a castle t...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -275,9 +233,6 @@
        "4      s5    Movie     21     Robert Luketic   \n",
        "5      s6  TV Show     46        Serdar Akar   \n",
        "6      s7    Movie    122    Yasir Al Yasiri   \n",
-       "7      s8    Movie    187     Kevin Reynolds   \n",
-       "8      s9    Movie    706      Shravan Kumar   \n",
-       "9     s10    Movie   1920       Vikram Bhatt   \n",
        "\n",
        "                                                Cast        Country  \\\n",
        "0  João Miguel, Bianca Comparato, Michel Gomes, R...         Brazil   \n",
@@ -287,9 +242,6 @@
        "4  Jim Sturgess, Kevin Spacey, Kate Bosworth, Aar...  United States   \n",
        "5  Erdal Beşikçioğlu, Yasemin Allen, Melis Birkan...         Turkey   \n",
        "6  Amina Khalil, Ahmed Dawood, Tarek Lotfy, Ahmed...          Egypt   \n",
-       "7  Samuel L. Jackson, John Heard, Kelly Rowan, Cl...  United States   \n",
-       "8  Divya Dutta, Atul Kulkarni, Mohan Agashe, Anup...          India   \n",
-       "9  Rajneesh Duggal, Adah Sharma, Indraneil Sengup...          India   \n",
        "\n",
        "        Release_Date Rating   Duration  \\\n",
        "0    August 14, 2020  TV-MA  4 Seasons   \n",
@@ -299,9 +251,6 @@
        "4    January 1, 2020  PG-13    123 min   \n",
        "5       July 1, 2017  TV-MA   1 Season   \n",
        "6       June 1, 2020  TV-MA     95 min   \n",
-       "7   November 1, 2019      R    119 min   \n",
-       "8      April 1, 2019  TV-14    118 min   \n",
-       "9  December 15, 2017  TV-MA    143 min   \n",
        "\n",
        "                                                Type  \\\n",
        "0  International TV Shows, TV Dramas, TV Sci-Fi &...   \n",
@@ -311,9 +260,6 @@
        "4                                             Dramas   \n",
        "5    International TV Shows, TV Dramas, TV Mysteries   \n",
        "6                Horror Movies, International Movies   \n",
-       "7                                             Dramas   \n",
-       "8                Horror Movies, International Movies   \n",
-       "9     Horror Movies, International Movies, Thrillers   \n",
        "\n",
        "                                         Description  \n",
        "0  In a future where the elite inhabit an island ...  \n",
@@ -322,20 +268,305 @@
        "3  In a postapocalyptic world, rag-doll robots hi...  \n",
        "4  A brilliant group of students become card-coun...  \n",
        "5  A genetics professor experiments with a treatm...  \n",
-       "6  After an awful accident, a couple admitted to ...  \n",
-       "7  After one of his high school students attacks ...  \n",
-       "8  When a doctor goes missing, his psychiatrist w...  \n",
-       "9  An architect and his wife move into a castle t...  "
+       "6  After an awful accident, a couple admitted to ...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('NetflixData.csv')\n",
-    "df.head(10)"
+    "df.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0355b6c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7789 entries, 0 to 7788\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   Show_Id       7789 non-null   object\n",
+      " 1   Category      7789 non-null   object\n",
+      " 2   Title         7789 non-null   object\n",
+      " 3   Director      5401 non-null   object\n",
+      " 4   Cast          7071 non-null   object\n",
+      " 5   Country       7282 non-null   object\n",
+      " 6   Release_Date  7779 non-null   object\n",
+      " 7   Rating        7782 non-null   object\n",
+      " 8   Duration      7789 non-null   object\n",
+      " 9   Type          7789 non-null   object\n",
+      " 10  Description   7789 non-null   object\n",
+      "dtypes: object(11)\n",
+      "memory usage: 669.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "119d69db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Show_Id</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Cast</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Release_Date</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7789</td>\n",
+       "      <td>7789</td>\n",
+       "      <td>7789</td>\n",
+       "      <td>5401</td>\n",
+       "      <td>7071</td>\n",
+       "      <td>7282</td>\n",
+       "      <td>7779</td>\n",
+       "      <td>7782</td>\n",
+       "      <td>7789</td>\n",
+       "      <td>7789</td>\n",
+       "      <td>7789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>7787</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7787</td>\n",
+       "      <td>4050</td>\n",
+       "      <td>6831</td>\n",
+       "      <td>681</td>\n",
+       "      <td>1565</td>\n",
+       "      <td>14</td>\n",
+       "      <td>216</td>\n",
+       "      <td>492</td>\n",
+       "      <td>7769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>s684</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Backfire</td>\n",
+       "      <td>Raúl Campos, Jan Suter</td>\n",
+       "      <td>David Attenborough</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>January 1, 2020</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Documentaries</td>\n",
+       "      <td>Multiple women report their husbands as missin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5379</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2556</td>\n",
+       "      <td>118</td>\n",
+       "      <td>2865</td>\n",
+       "      <td>1608</td>\n",
+       "      <td>334</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Show_Id Category     Title                Director                Cast  \\\n",
+       "count     7789     7789      7789                    5401                7071   \n",
+       "unique    7787        2      7787                    4050                6831   \n",
+       "top       s684    Movie  Backfire  Raúl Campos, Jan Suter  David Attenborough   \n",
+       "freq         2     5379         2                      18                  18   \n",
+       "\n",
+       "              Country     Release_Date Rating  Duration           Type  \\\n",
+       "count            7282             7779   7782      7789           7789   \n",
+       "unique            681             1565     14       216            492   \n",
+       "top     United States  January 1, 2020  TV-MA  1 Season  Documentaries   \n",
+       "freq             2556              118   2865      1608            334   \n",
+       "\n",
+       "                                              Description  \n",
+       "count                                                7789  \n",
+       "unique                                               7769  \n",
+       "top     Multiple women report their husbands as missin...  \n",
+       "freq                                                    3  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0a3fcb62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Show_Id            0\n",
+       "Category           0\n",
+       "Title              0\n",
+       "Director        2388\n",
+       "Cast             718\n",
+       "Country          507\n",
+       "Release_Date      10\n",
+       "Rating             7\n",
+       "Duration           0\n",
+       "Type               0\n",
+       "Description        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e3be6ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Show_Id', 'Category', 'Title', 'Director', 'Cast', 'Country',\n",
+       "       'Release_Date', 'Rating', 'Duration', 'Type', 'Description'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8cb5898b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Type\n",
+       "Documentaries                                                  334\n",
+       "Stand-Up Comedy                                                321\n",
+       "Dramas, International Movies                                   320\n",
+       "Comedies, Dramas, International Movies                         243\n",
+       "Dramas, Independent Movies, International Movies               215\n",
+       "                                                              ... \n",
+       "Crime TV Shows, International TV Shows, TV Sci-Fi & Fantasy      1\n",
+       "Docuseries, Science & Nature TV, TV Action & Adventure           1\n",
+       "British TV Shows, Classic & Cult TV, Kids' TV                    1\n",
+       "Docuseries, TV Sci-Fi & Fantasy                                  1\n",
+       "Children & Family Movies, Dramas, Music & Musicals               1\n",
+       "Name: count, Length: 492, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Category'].unique()\n",
+    "df['Director'].nunique()\n",
+    "df['Country'].nunique()\n",
+    "df['Type'].nunique()\n",
+    "\n",
+    "df['Category'].value_counts()\n",
+    "df['Director'].value_counts()\n",
+    "df['Country'].value_counts()\n",
+    "df['Type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "363297a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical:  ['Show_Id', 'Category', 'Title', 'Director', 'Cast', 'Country', 'Release_Date', 'Rating', 'Duration', 'Type', 'Description'] \n",
+      " Numerical:  []\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat=[]\n",
+    "con=[]\n",
+    "for i in df.columns:\n",
+    "    if df[i].dtype == 'object':\n",
+    "        cat.append(i)\n",
+    "    else:\n",
+    "        con.append(i)\n",
+    "\n",
+    "print(\"Categorical: \",cat, \"\\n\", \"Numerical: \",con)"
    ]
   },
   {
@@ -2650,7 +2881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   },
   "papermill": {
    "default_parameters": {},
