--- a/netflix-DataAnalysis_Python.ipynb
+++ b/netflix-DataAnalysis_Python.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "25bb3842",
    "metadata": {
     "execution": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "f4963c63",
    "metadata": {
     "execution": {
@@ -271,7 +271,7 @@
        "6  After an awful accident, a couple admitted to ...  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
+   "id": "33a2fd74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7789, 11)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0355b6c7",
    "metadata": {},
    "outputs": [
@@ -318,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "119d69db",
    "metadata": {},
    "outputs": [
@@ -437,7 +458,7 @@
        "freq                                                    3  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,39 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "0a3fcb62",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Show_Id            0\n",
-       "Category           0\n",
-       "Title              0\n",
-       "Director        2388\n",
-       "Cast             718\n",
-       "Country          507\n",
-       "Release_Date      10\n",
-       "Rating             7\n",
-       "Duration           0\n",
-       "Type               0\n",
-       "Description        0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "e3be6ae1",
    "metadata": {},
    "outputs": [
@@ -492,7 +481,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "8cb5898b",
    "metadata": {},
    "outputs": [
@@ -525,7 +514,7 @@
        "Name: count, Length: 492, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "363297a3",
    "metadata": {},
    "outputs": [
@@ -570,14 +559,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "212e2994",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "0dc4322e",
    "metadata": {
@@ -596,24 +577,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "611aa78c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-03T10:55:49.644639Z",
-     "iopub.status.busy": "2025-08-03T10:55:49.644326Z",
-     "iopub.status.idle": "2025-08-03T10:55:49.676713Z",
-     "shell.execute_reply": "2025-08-03T10:55:49.675771Z"
-    },
-    "papermill": {
-     "duration": 0.041444,
-     "end_time": "2025-08-03T10:55:49.678449",
-     "exception": false,
-     "start_time": "2025-08-03T10:55:49.637005",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "execution_count": 10,
+   "id": "45b5d884",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -638,6 +604,9 @@
        "      <th></th>\n",
        "      <th>Show_Id</th>\n",
        "      <th>Director</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Duration</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -645,24 +614,30 @@
        "      <th>2832</th>\n",
        "      <td>s2833</td>\n",
        "      <td>Robin Wright, David Fincher, Gerald McRaney, J...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>6 Seasons</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Show_Id                                           Director\n",
-       "2832   s2833  Robin Wright, David Fincher, Gerald McRaney, J..."
+       "     Show_Id                                           Director  \\\n",
+       "2832   s2833  Robin Wright, David Fincher, Gerald McRaney, J...   \n",
+       "\n",
+       "            Country Rating   Duration  \n",
+       "2832  United States  TV-MA  6 Seasons  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "house_of_cards = df[df['Title'] == 'House of Cards'][['Show_Id', 'Director']]\n",
-    "house_of_cards"
+    "HoC = df[df['Title']=='House of Cards'][['Show_Id', 'Director', 'Country','Rating', 'Duration']]\n",
+    "HoC"
    ]
   },
   {
@@ -680,13 +655,16 @@
    },
    "source": [
     "In which year the highest number of TV Shows & Movies were released? Show with Bar Graph.\n",
-    "**Code Explanation**: A `Year` column is extracted from `Release_Date` using `pd.to_datetime()`. The `value_counts()` method counts releases per year, and `idxmax()` identifies the year with the most releases. A bar graph is created using `sns.countplot()` to visualize the distribution.\n",
+    "\n",
+    "`Year` extracted from `Release_Date` using `pd.to_datetime()`. \n",
+    "`value_counts()` method counts releases per year, \n",
+    "`idxmax()` identifies the year with the most releases.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "8255b63c",
    "metadata": {
     "execution": {
@@ -704,14 +682,47 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2020.0\n",
+       "1       2016.0\n",
+       "2       2018.0\n",
+       "3       2017.0\n",
+       "4       2020.0\n",
+       "         ...  \n",
+       "7784    2020.0\n",
+       "7785    2019.0\n",
+       "7786    2020.0\n",
+       "7787    2020.0\n",
+       "7788    2020.0\n",
+       "Name: Year, Length: 7789, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['Year'] = pd.to_datetime(df['Release_Date'], errors='coerce').dt.year"
+    "df['Year'] = pd.to_datetime(df['Release_Date'], errors='coerce').dt.year\n",
+    "df['Year']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
+   "id": "34a90312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_movies = df['Year'].value_counts().idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "b477ac50",
    "metadata": {
     "execution": {
@@ -749,8 +760,8 @@
     }
    ],
    "source": [
-    "max_year = df['Year'].value_counts().idxmax()\n",
-    "print(f'Year with highest number of releases: {max_year}')\n",
+    "print(f'Year with highest number of releases: {Total_movies}')\n",
+    "plt.Figure(figsize=(15,6))\n",
     "sns.countplot(data=df, x='Year')\n",
     "plt.title('Number of Releases by Year')\n",
     "plt.xlabel('Year')\n",
@@ -781,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "6f34f1f5",
    "metadata": {
     "execution": {
@@ -850,77 +861,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "532525f8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-03T10:55:50.403221Z",
-     "iopub.status.busy": "2025-08-03T10:55:50.402879Z",
-     "iopub.status.idle": "2025-08-03T10:55:50.416668Z",
-     "shell.execute_reply": "2025-08-03T10:55:50.415617Z"
-    },
-    "papermill": {
-     "duration": 0.024667,
-     "end_time": "2025-08-03T10:55:50.418482",
-     "exception": false,
-     "start_time": "2025-08-03T10:55:50.393815",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Show_Id</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Director</th>\n",
-       "      <th>Release_Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Show_Id, Title, Director, Release_Date]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "b0360f6e",
+   "metadata": {},
    "source": [
-    "movies_2000 = df[(df['Category'] == 'Movie') & (df['Year'] == 2000)][['Show_Id', 'Title', 'Director', 'Release_Date']]\n",
-    "movies_2000"
+    "YearWise Movies Count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
+   "id": "161a9c80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008.0: 1\n",
+      "2009.0: 2\n",
+      "2010.0: 1\n",
+      "2011.0: 13\n",
+      "2012.0: 3\n",
+      "2013.0: 6\n",
+      "2014.0: 19\n",
+      "2015.0: 58\n",
+      "2016.0: 258\n",
+      "2017.0: 864\n",
+      "2018.0: 1255\n",
+      "2019.0: 1498\n",
+      "2020.0: 1313\n",
+      "2021.0: 88\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies_per_year = df[df['Category'] == 'Movie']['Year'].value_counts().sort_index()\n",
+    "for year, count in movies_per_year.items():\n",
+    "    print(f\"{year}: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "edb1ad8b",
    "metadata": {
     "execution": {
@@ -1079,7 +1062,7 @@
        "[1313 rows x 4 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1093,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
+   "id": "1237d9a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: Title, dtype: object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TvShows_India = df[(df['Category'] == 'Tv Show') & (df['Country'] == 'India')]['Title'] \n",
+    "\n",
+    "TvShows_India"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "295c1ea9",
    "metadata": {
     "execution": {
@@ -1146,7 +1152,7 @@
        "Name: Title, Length: 71, dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "4f503bed",
    "metadata": {
     "execution": {
@@ -1257,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "id": "af7164e1",
    "metadata": {
     "execution": {
@@ -1551,7 +1557,7 @@
        "[1838 rows x 12 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "9b533445",
    "metadata": {
     "execution": {
@@ -1636,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "id": "c3cb31d0",
    "metadata": {
     "execution": {
@@ -1690,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "id": "3be25348",
    "metadata": {
     "execution": {
@@ -1743,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "id": "8bea96a7",
    "metadata": {
     "execution": {
@@ -1796,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "id": "4291e778",
    "metadata": {
     "execution": {
@@ -1854,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "id": "c980cda6",
    "metadata": {
     "execution": {
@@ -1909,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "id": "6b07913c",
    "metadata": {
     "execution": {
@@ -2240,7 +2246,7 @@
        "[7789 rows x 14 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2271,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "id": "eff2ea5d",
    "metadata": {
     "execution": {
@@ -2602,7 +2608,7 @@
        "[531 rows x 14 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
